Add maven publish scripts. Update README.md download info.

--- a/gradle.properties
+++ b/gradle.properties
@@ -11,3 +11,19 @@ org.gradle.jvmargs=-Xmx1536m
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
+
+libraryVersion = 0.0.1
+libraryName = VolumeView
+libraryDescription = A view which represents percentage value as volume slider graphically.
+publishedGroupId = com.vladimirpetrovski.android
+artifact = volumeview
+bintrayRepo = maven
+bintrayName = VolumeView
+siteUrl = https://github.com/vladimirpetrovski/VolumeView
+gitUrl = https://github.com/vladimirpetrovski/VolumeView.git
+developerId = vladimirpetrovski
+developerName = Vladimir Petrovski
+developerEmail = vladimir.petrovski2@gmail.com
+licenseName = The MIT License (MIT)
+licenseUrl = https://github.com/vladimirpetrovski/VolumeView/blob/master/LICENSE
+allLicenses = ["MIT"]
