--- a/volumeview/build.gradle
+++ b/volumeview/build.gradle
@@ -6,11 +6,7 @@ android {
     defaultConfig {
         minSdkVersion 21
         targetSdkVersion 28
-        versionCode 1
-        versionName "1.0"
-
-        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
-
+        versionName project.getProperty("libraryVersion")
     }
 
     buildTypes {
@@ -25,6 +21,9 @@ android {
         targetCompatibility JavaVersion.VERSION_1_8
     }
 }
+
+apply from: 'https://raw.githubusercontent.com/kostasdrakonakis/maven-upload/master/bintray.gradle'
+apply from: 'https://raw.githubusercontent.com/kostasdrakonakis/maven-upload/master/publications.gradle'
 
 dependencies {
     implementation 'com.android.support:appcompat-v7:28.0.0-rc01'
